# Data_eng_learning

./: .gitignore
cpp-learn/: CMakeLists.txt  Makefile  README.md
cpp-learn/docs/: 01_auto_driving_pipeline.md
cpp-learn/examples/: 01_pointers.cpp  02_references.cpp  03_stl.cpp  04_raii.cpp  05_mock_bag_parser.cpp  06_trajectory_filter.cpp  07_sensor_sync.cpp  08_pybind11_demo.cpp  09_multithreading_basic.cpp  10_mutex_and_locks.cpp  data.txt
point-cloud-learn/: README.md  pyproject.toml
point-cloud-learn/examples/: 01_kitti_bin_read.py  02_visualize_pointcloud.py  03_open3d_basics.py  04_voxel_downsampling.py  05_statistical_outlier_removal.py  06_radius_filter.py  07_transform_matrix.py  08_icp_registration.py  09_coordinate_systems.py  10_lidar_to_vehicle_frame.py  11_comprehensive_exercise.py
point-cloud-learn/utils/: kitti_loader.py  sample_data.py  visualize.py
spark-learn/: README.md  pyproject.toml
spark-learn/examples/: 02_log_etl.py
spark-learn/output/ip_counts/: .part-00000-ad37753d-5386-4671-a3f2-516089a36b69-c000.snappy.parquet.crc  part-00000-ad37753d-5386-4671-a3f2-516089a36b69-c000.snappy.parquet
spark-learn/utils/: sample_data.py  spark_session.py
