[project]
name = "point-cloud-learn"
version = "0.1.0"
description = "点云处理学习：KITTI 读取、可视化、滤波、配准与坐标系变换"
authors = [{ name = "xuhaoyuan" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "open3d>=0.17",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
