[project]
name = "spark-learn"
version = "0.1.0"
description = "Spark 学习：日志 ETL、DataFrame 转换与 Parquet 输出"
authors = [{ name = "xuhaoyuan" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyspark>=3.5,<4.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
